Added more settings

--- a/WeldHandbook/Localization/Localizable.xcstrings
+++ b/WeldHandbook/Localization/Localizable.xcstrings
@@ -5069,6 +5069,9 @@
         }
       }
     },
+    "GMAW Aluminum" : {
+
+    },
     "GMAW PROCESS" : {
       "localizations" : {
         "en" : {
